--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gridsome": "^0.7.0"
   },
   "devDependencies": {
-    "gridsome-plugin-tailwindcss": "^3.0.1"
+    "gridsome-plugin-tailwindcss": "^3.0.1",
+    "sass-loader": "^9.0.2"
   }
 }
