--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "gridsome-plugin-tailwindcss": "^3.0.1",
+    "sass": "^1.26.10",
     "sass-loader": "^9.0.2"
   }
 }
